add signin and signup

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures{
+        viewBinding true;
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
+
+
 }
 
 dependencies {
 
+//    implementation 'com.aurelhubert:ahbottomnavigation:2.2.0'
+    implementation 'com.airbnb.android:lottie:6.3.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
